--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "next": "13.4.2",
     "npm": "^9.6.7",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.9.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "^10.4.14",
+    "daisyui": "^3.1.0",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2"
   }
