--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "babel-plugin-macros": "^3.1.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
-    "next": "13.4.2",
+    "next": "^13.4.19",
     "npm": "^9.6.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
