--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@heroicons/react": "^2.0.18",
     "babel-plugin-macros": "^3.1.0",
+    "cssnano": "^6.0.1",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "next": "^13.4.19",
