--- a/package.json
+++ b/package.json
@@ -9,28 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@babel/helper-module-imports": "^7.21.4",
-    "@fortawesome/fontawesome-svg-core": "^6.4.0",
-    "@fortawesome/free-brands-svg-icons": "^6.4.0",
-    "@fortawesome/free-regular-svg-icons": "^6.4.0",
-    "@fortawesome/free-solid-svg-icons": "^6.4.0",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@heroicons/react": "^2.0.18",
+    "@babel/helper-module-imports": "^7.27.1",
+    "@fortawesome/fontawesome-svg-core": "^7.1.0",
+    "@fortawesome/free-brands-svg-icons": "^7.1.0",
+    "@fortawesome/free-regular-svg-icons": "^7.1.0",
+    "@fortawesome/free-solid-svg-icons": "^7.1.0",
+    "@fortawesome/react-fontawesome": "^3.1.1",
+    "@heroicons/react": "^2.2.0",
+    "@tailwindcss/cli": "^4.1.18",
+    "@tailwindcss/postcss": "^4.1.18",
     "babel-plugin-macros": "^3.1.0",
-    "cssnano": "^6.0.1",
-    "eslint": "8.40.0",
-    "eslint-config-next": "13.4.2",
-    "next": "^13.4.19",
-    "npm": "^9.6.7",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.9.0"
+    "cssnano": "^7.1.2",
+    "next": "^16.0.10",
+    "npm": "^11.7.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.3",
-    "autoprefixer": "^10.4.14",
-    "daisyui": "^3.1.0",
-    "postcss": "^8.4.23",
-    "tailwindcss": "^3.3.2"
+    "@eslint/eslintrc": "^3.3.3",
+    "@eslint/js": "^9.39.2",
+    "@tailwindcss/forms": "^0.5.10",
+    "autoprefixer": "^10.4.23",
+    "daisyui": "^5.5.14",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18"
   }
 }
